thrift/src/test/resources/inspections/duplicates/name/senum.thrift
senum SomeSenum {
    "VALUE1",
    <error descr="multiple senum values \"VALUE1\"">"VALUE1"</error>,
    "VALUE2"
}

senum SomeSenum1 {
    "VALUE1",
    "VALUE2"
}